welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:22: error: not found: value l
  if ((getX())==(l-1)){
                 ^LineByLine:23: error: not found: value l
    setPos(l-1,getY()+1)
           ^